# NoFancyShitExtensions

./: .gitignore  CMakeLists.txt  main.cpp
src/: nfse.h
src/base/: nfseerror.cpp  nfseerror.h
src/polymorphicvalue/: polymorphicvalue.h  polymorphicvalue.txx
unittest/compiletest/: compiletest.cpp
unittest/compiletest/expectFail/: polymorphicvalue.cpp
unittest/compiletest/expectSuccess/: polymorphicvalue.cpp
unittest/polymorphicvalue/: assignment_operator.cpp  ctor.cpp
